Fix overflow

--- a/frontend/event-payment/src/Components/styles/App.css
+++ b/frontend/event-payment/src/Components/styles/App.css
@@ -20,6 +20,7 @@ div.App{
   min-height:100vh;
   min-width: 100vw;
   background: url(/img/twill.jpg) fixed;
+  overflow: hidden;
 }
 
 
